hero button mobile display fixed

--- a/src/components/blocks/motionCarousel/motionCarousel.module.scss
+++ b/src/components/blocks/motionCarousel/motionCarousel.module.scss
@@ -7,8 +7,10 @@
   margin-bottom: calc($space6 * 2);
   // -webkit-mask-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
   // mask-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+@media screen and ($tablet) {
   -webkit-mask-image: linear-gradient(90deg, rgba(0, 0, 0, 1) 97%, transparent);
   mask-image: linear-gradient(90deg, rgba(0, 0, 0, 1) 97%, transparent);
+}
   .innerWrapper {
     display: inline-flex;
     gap: $space3;
