--- a/src/scss/_placeholders.scss
+++ b/src/scss/_placeholders.scss
@@ -7,4 +7,7 @@
     text-transform: uppercase;
     padding: $btnPadding;
     border-radius: $borderRadius;
+    display: inline-block;
+    line-height: 160%;
+    text-align: center;
 }
